<resources>

    <!-- APP STRINGS -->
    <string name="app_name">Easy Finance Personal</string>
    <string name="menu_settings">Settings</string>
    <string name="app_string_create">Create</string>
	<string name="app_select_item">Select an Item first</string>
    <string name="app_saved">Saved</string>
    <string name="app_done">Done</string>
    <string name="app_is_null">is null</string>
    <string name="app_changing_amount">Changing Amount</string>
    <string name="app_amount_changed">Amount Changed</string>
    <string name="app_amount_cannot_be_null">Amount can not be null</string>
    <string name="app_changing_date">Changing Date</string>
    <string name="app_date_changed">Date Changed</string>

    <!-- LOGIN -->
    <string name="login_not_valid_user">Sorry, user credentials are not valid. Try again.</string>
    
    <!-- Budgets -->
    <string name="budgets_add_budget">Add Budget</string>
    <string name="budgets_empty_budget">Empty budget</string>
    <string name="budgets_select_regularity">Select the regularity</string>
    <string name="budgets_The_transaction_could_not_be_maded">The transaction could not be made</string>
    <string name="budgets_editing_budget">Editing Budget</string>
     
   	<!-- ACTIVITIES -->
   	<string name="title_activity_splash">Easy Finance</string>
    <string name="title_activity_dashboard">Dashboard</string>    
    <string name="title_activity_accounts">Accounts</string>
    <string name="title_activity_categories">Categories</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_budget">Budgets</string>
    <string name="title_activity_reports">Reports</string>
    <string name="title_activity_history">Record</string>
    <string name="title_activity_transactions">Transactions</string>
    
    <!-- CATEGORIAS CONTABLES -->
    <string name="accountant_category_budget">Budget</string>
    <string name="accountant_category_incomes">Incomes</string>
	<string name="accountant_category_expenses">Expenses</string>
    <string name="accountant_category_bills">Bills</string>
     
    <!-- INCOMES TYPES -->
	<string name="income_type_salary">Salary</string>
    <string name="income_type_work">Works</string>
    
    <!-- ACCOUNT TYPES -->
    <string name="account_type_cash">Cash</string>
    <string name="account_type_card">Card</string>
     
     <!-- DASHBOARD -->
    <string name="subtitle_balance">Balance</string>
    <string name="subtitle_Available">Available</string>
    <string name="account_create_account">Create Account</string>
    
    <string name="account_create_account_name_null">Account Name can not be empty</string>
    <string name="account_initial_value_null">Initial Value can not be empty</string>
    <string name="create_category">Create Category</string>
    <string name="category_name">Category Name</string>

    <!-- ACCOUNTS -->
    <string name="account_initial_value">Initial Value</string>
    <string name="account_account_name">Account Name</string>
    <string name="account_add_account">Add Account</string>
    <string name="account_edit_account">Edit Account</string>
    <string name="account_empty_fields">Some fields are empty</string>
    <string name="account_aditional_info">Aditional Info</string>
    
    <!-- CATEGORIES -->
	<string name="category_bank">Bank</string>
	<string name="category_bus">Bus</string>
	<string name="category_car">Car</string>	
	<string name="category_church">Church</string>
	<string name="category_cloth">Cloth</string>
	<string name="category_drink">Drink</string>	
	<string name="category_food">Food</string>
	<string name="category_friends">Friends</string>
	<string name="category_games">Games</string>	
	<string name="category_gifts">Gifts</string>
	<string name="category_groceries">Groceries</string>
	<string name="category_home">Home</string>	
	<string name="category_medicine">Medicine</string>
	<string name="category_relationships">Relationships</string>
	<string name="category_reparations">Reparations</string>
	<string name="category_sports">Sports</string>
	<string name="category_studies">Studies</string>
	<string name="category_trips">Trips</string>
	
	 <!-- BILLS -->
	<string name="bills_assurance">Assurance</string>
	<string name="bills_smartphone">Smartphone</string>	
	<string name="bills_garbage">Garbage</string>
	<string name="bills_internet">Internet</string>
	<string name="bills_electricity">Electricity</string>
	<string name="bills_phone">Phone</string>
	<string name="bills_cable">Cable</string>
	<string name="bills_water">Water</string>
	
	<!-- MONTHS -->
	<string name="month_january">JanuFary</string>
	<string name="month_february">February</string>
	<string name="month_march">March</string>	
	<string name="month_april">April</string>
	<string name="month_may">May</string>
	<string name="month_june">June</string>	
	<string name="month_july">July</string>
	<string name="month_august">August</string>
	<string name="month_september">September</string>	
	<string name="month_october">October</string>
	<string name="month_november">November</string>
	<string name="month_december">December</string>
	
	<string name="choose_category">Choose Category</string>
	<string name="change_amount">Change Amount</string>
	<string name="change_date">Change Date</string>
	<string name="repeat">Repeat</string>
	
	<string name="change_regularity">Change Regularity</string>
	    
	<!-- REGULARITY ITEMS -->
	<string name="regularity_never">Never</string>
	<string name="regularity_daily">Daily</string>
	<string name="regularity_weekly">Weekly</string>	
	<string name="regularity_biweekly">Biweekly</string>
	<string name="regularity_monthly">Monthly</string>
	<string name="regularity_trimestral">Trimestral</string>	
	<string name="regularity_quarterly">Quarterly</string>
	<string name="regularity_biyearly">Biyearly</string>
	<string name="regularity_yearly">Yearly</string>
	    
    <!-- TITLE ACTIVITIES -->
  
    <string name="activity_accounts">Accounts</string>
    <string name="activity_budget">Budgets</string>
    <string name="activity_history">History</string>
    <string name="activity_transactions">Transactions</string>

</resources>