<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <RadioGroup
                android:id="@+id/radioGroupRegularity"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/radioNunca"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/regularity_never" />

                <RadioButton
                    android:id="@+id/radioDiario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/regularity_daily" />

                <RadioButton
                    android:id="@+id/radioSemanal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/regularity_weekly" />

                <RadioButton
                    android:id="@+id/radioQuincenal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/regularity_biweekly" />

                <RadioButton
                    android:id="@+id/RadioButtonMensual"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/regularity_monthly" />

                <RadioButton
                    android:id="@+id/RadioButtonTrimestral"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/regularity_trimestral" />

                <RadioButton
                    android:id="@+id/RadioButtonCuatrimestral"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/regularity_quarterly" />

                <RadioButton
                    android:id="@+id/RadioButtonSemestral"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/regularity_biyearly" />

                <RadioButton
                    android:id="@+id/RadioButtonAnual"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/regularity_yearly" />
            </RadioGroup>
        </LinearLayout>
    </ScrollView>

</LinearLayout>