<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TabHost
            android:id="@android:id/tabhost"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TabWidget
                    android:id="@android:id/tabs"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >
                </TabWidget>

                <FrameLayout
                    android:id="@android:id/tabcontent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <LinearLayout
                        android:id="@+id/tab1"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:visibility="visible" >

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/tab2"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:visibility="visible" >

                    </LinearLayout>
                </FrameLayout>
            </LinearLayout>
        </TabHost>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/titleCategories"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:visibility="visible" >

        <TableRow
            android:id="@+id/TableRow01"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/imageViewCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/icon_categories55x55" />

            <TextView
                android:id="@+id/textViewTitleChooseCategories"
                style="@style/TitleYellow"
                android:text="@string/choose_category" />

        </TableRow>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tabCategories"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:visibility="gone" >

        <GridView
            android:id="@+id/gridViewTransactionCategories"
            style="@style/GridViewStyle"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="100"
            android:columnWidth="100dp"
            android:gravity="center"
            android:horizontalSpacing="10dp"
            android:numColumns="3"
            android:stretchMode="columnWidth"
            android:verticalSpacing="10dp" >
        </GridView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/titleAmount"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:visibility="visible" >

        <TableRow
            android:id="@+id/TableRow03"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/ImageView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/icon_coin" />

            <TextView
                android:id="@+id/textViewAmount"
                style="@style/TitleYellow"
                android:text="@string/change_amount" />

        </TableRow>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/titleDate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:visibility="visible" >

        <TableRow
            android:id="@+id/TableRow02"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/ImageView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/icon_budget_55x55" />

            <TextView
                android:id="@+id/textViewDate"
                style="@style/TitleYellow"
                android:text="@string/change_date" />

        </TableRow>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/titleRegularity"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:visibility="visible" >

        <TableRow
            android:id="@+id/TableRow04"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/ImageView03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/repeat" />

            <TextView
                android:id="@+id/textViewRepeat"
                style="@style/TitleYellow"
                android:layout_width="fill_parent"
                android:text="@string/change_regularity" />

        </TableRow>
    </LinearLayout>

</LinearLayout>